# dragon

./: CMakeLists.txt  README.md
src/: camera.h  integrator.h  light.h  main.cpp  material.h  math.h  object.h  primitive.h  transform.h
src/3DStructure/: floor.h  sphere.h
src/Abstract/: object.h  primitive.h  spectrum.h
src/Descriptor/Geometry/: floor.h  sphere.h
src/Descriptor/Radiometry/: SpatialSpectrum.h
src/Material/: SpecularBRDF.cpp  SpecularBRDF.h  bxdf.h  fresnel.cpp  fresnel.h  lambertianBRDF.cpp  lambertianBRDF.h
src/System/: defines.h  types.h
src/datastructure/: object.h
src/math/: dragonMath.h  math.h  transform.h
